@@ -435,7 +435,6 @@ Fvwm2 *does* rock! Waiting impatiently for native PNG support.
 </pre></font>
 <p>
 (Christian's wish was fulfilled.)
-
  	</td></tr>
 
       <tr valign="top"><td>
@@ -460,6 +459,17 @@ The <A HREF="http://www.cs.kuleuven.ac.be/~remko/fvwm/icons.tgz">icons</A>
 in the menus are mostly taken from the 
 <A HREF="http://wm-icons.sourceforge.net/">wm-icons</A> distribution.
  	</td></tr>
+
+      <tr valign="top"><td>
+	  <a href="http://www.zip.com.au/~cs/fvwm/">
+	    <img src="http://www.zip.com.au/~cs/fvwm/desktop0-thumb.jpg"
+	      alt="Cameron Simpson"
+	      width=160 height=120 align=left></a></td>
+	<td>
+	  Submitted by Cameron Simpson.  Uses Xinerama.
+This is the
+Zen style by Cameron Simpson,
+<a href="http://www.zip.com.au/~cs/fvwm/">details here</a>.
     </table>
     <hr>
     Created: June 13, 1999 ----- Last Updated: Sept 25, 2001.
